--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "jpgulp",
+  "name": "Company Front",
   "version": "1.0.0",
-  "description": "Learning how to do Gulp stuff!",
+  "description": "A basic starter theme for the Genesis Framework with BrowserSync support.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jordan Pakrosnis",
   "license": "ISC",
+  "repository": "https://github.com/JordanPak/company-front",
   "devDependencies": {
     "browser-sync": "^2.11.1",
     "gulp": "^3.9.1",
